--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index_ex4_4.js"></script>
+    <h2>Hello</h2>
+    <button>버튼</button>
+    <script src="index_ex5_2.js"></script>
 </body>
 </html>
